--- a/package.json
+++ b/package.json
@@ -2,26 +2,15 @@
   "name": "core-websocket",
   "version": "0.0.0",
   "dependencies": {
-    "coffeeify": "",
-    "coffee-script": "1.7.1",
-    "browserify": "",
-    "browserify-data": "",
-    "gulp": "",
-    "gulp-browserify": "",
-    "gulp-shell": "",
-    "gulp-less": "",
-    "gulp-replace": "",
-    "gulp-rename": "",
-    "gulp-concat": "",
-    "vulcanize": "",
     "express": "",
-    "polymer": "git://github.com/Custom-Elements/polymer",
     "lodash": "^2.4.1",
-    "ws": "^0.4.31"
+    "ws": "^0.4.31",
+    "polymer-tools": "git://github.com/custom-elements/polymer-tools#master",
+    "polymer": "git://github.com/custom-elements/polymer#master"
   },
-  "license": "MIT",
+  "license": "ISC",
   "scripts": {
-    "postinstall": "gulp build",
-    "test": "gulp watch"
+    "postinstall": "polymer-build src/ build/",
+    "test": "polymer-build watch . src/ build/"
   }
 }
